@@ -8,3 +8,4 @@
 - remove hash/list buffering in list.c hash.c?
 - if speak_to_ip is non-multicast check if listener has 
   the speak_to_ip.
+- finish up listen_on_network_interface stuff
